# wenbi

./: .gitignore  Phd-test1.docx  README.md  Tommy Robinson on UK Grooming Gangs - Originally Censored Now Very Relevant.csv  cli.py  main.py  model.py  mutilang.py  pybk.toml  pyproject.toml  setup_models.py  utils.py
config/: example.yaml  ware2-18.yaml  wenbi-config.yaml  wenbi-config2.yaml
test/: cut.py  cutv0.1.py  cutv0.11.py  ppt-md.py  video-split.py
wenbi/: cli.py  cli.py.backup  main.py  main.py.backup  model.py  track_changes.lua  utils.py
