[project]
name = "wenbi"
version = "0.1.2"
description = "Change all video, audio and subtitle files into a readable markdown files with the ability to tranlate the text into any language and rewrite."
license = "MIT"
authors = [
    { name = "ajia", email = "yyjfwoaini@gmail.com" }
]
dependencies = [
    "openai-whisper>=20240930",
    "gradio>=5.16.1",
    "moviepy>=2.1.2",
    "pydub>=0.25.1",
    "pandas>=2.2.3",
    "spacy>=3.8.4",
    "dspy>=2.6.3",
    "pip>=25.0.1",
    "marimo[sql]>=0.11.7",
    "fasttext>=0.9.2",
    "yt-dlp>=2025.2.19",
    "pyannote-audio>=3.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wenbi"]
